// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-1e6wat5"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render margin 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-l5m7to"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render marginBottom 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-nk9mtp"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render marginTop 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-wlmj95"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;
